--- a/style.css
+++ b/style.css
@@ -47,24 +47,15 @@ p{
 .half-width img{
     width: 100%;
 }
-.half-width-1{
-    width: 40%;
-    float: right;
-    margin-left: 5%;
-    padding-left: 2%;
-}
-.half-width-1 img{
-    width: 100%;
-}
+
 .top-banner{
     background-image: url("/images/top-banner.png");
     background-repeat: no-repeat;
 }
-.middle-banner{
+.dearm-area{
     background-image: url("/images/dream-bg.png");
     background-repeat: no-repeat;
     background-position: right;
-    padding-right: 10%;
 }
 section{
     height: 500px;
