--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ section{
     background-color: aliceblue;
 }
 .experiance-area{
-    background-image: url("images/exp-bg.png");
+    background-image: url("/images/exp-bg.png");
     background-repeat: no-repeat;
     background-position: left;
 }
