--- a/style.css
+++ b/style.css
@@ -53,11 +53,11 @@ p{
 }
 
 .top-banner{
-    background-image: url("/images/top-banner.png");
+    background-image: url("top-banner.png");
     background-repeat: no-repeat;
 }
 .dearm-area{
-    background-image: url("/images/dream-bg.png");
+    background-image: url("dream-bg.png");
     background-repeat: no-repeat;
     background-position: right, bottom;
 }
@@ -102,7 +102,7 @@ section{
     background-color: aliceblue;
 }
 .experiance-area{
-    background-image: url("/images/exp-bg.png");
+    background-image: url("exp-bg.png");
     background-repeat: no-repeat;
     background-position: left;
 }
