--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Supermercado One', cursive;
     margin: 0%;
+    overflow: auto;
 }
 
 h1{
@@ -104,6 +105,7 @@ section{
     color: gray;
     height: 70%;
     padding: 10px;
+    overflow: auto;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
